# Telegram-leads-bot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/apps/accounts/: admin.py  serializers.py  views.py
backend/apps/audit/: admin.py  models.py  services.py
backend/apps/audit/migrations/: 0001_initial.py
backend/apps/bots/: admin.py  models.py  serializers.py  services.py  views.py
backend/apps/bots/migrations/: 0001_initial.py  0002_bot_owner_bot_bots_bot_owner_i_b2007e_idx.py
backend/apps/core/: exceptions.py  permissions.py  responses.py  tasks.py
backend/apps/icps/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/icps/migrations/: 0001_initial.py  0002_icp_owner_prompttemplate_owner_and_more.py
backend/apps/leads/: admin.py  models.py  serializers.py  services.py  views.py
backend/apps/leads/migrations/: 0001_initial.py  0002_rename_leads_lead_bot_id_745233_idx_leads_lead_bot_id_04c2be_idx_and_more.py
backend/apps/llm/: admin.py  models.py  serializers.py  services.py  views.py
backend/apps/llm/migrations/: 0001_initial.py  0002_llmproviderconfig_owner_and_more.py
backend/apps/sheets/: admin.py  apps.py  models.py  serializers.py  services.py  views.py
backend/apps/telegram/: services.py  urls.py  views.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  production.py
backend/tests/: test_backend_core.py  test_health.py
deploy/: Caddyfile
(+70 files in other folders)
